# backend/back-neovook/src/users/users.controller.ts
@@ -1,21 +1,22 @@
-import { Body, Controller, Get, Post } from "@nestjs/common";
-import { UsersService } from "./users.service";
-import { User } from "./entity/user.entity";
-import { Public } from "src/common/decorators/public.decorator";
+import { Body, Controller, Get, Post, Req } from '@nestjs/common';
+import { UsersService } from './users.service';
+import { User } from './entity/user.entity';
+import { Public } from 'src/common/decorators/public.decorator';
 
-@Controller('api')
-export class UsersController{
-    constructor(private readonly usersService: UsersService){}
+@Controller('api/user')
+export class UsersController {
+  constructor(private readonly usersService: UsersService) {}
 
-    @Get("users/get")
-    async getUsers(){
-        const data = await this.usersService.getUsers();
-        return data
-    }
+  @Get('profile')
+  async getUsers(@Req() request: Request) {
+    const userJwt = request['user'];
+    const data = await this.usersService.getUserById(userJwt.userId);
+    return data;
+  }
 
-    @Public()
-    @Post("user/create")
-    async createUser(@Body() user: User){
-        return await this.usersService.createUser(user)
-    }
+  @Public()
+  @Post('create')
+  async createUser(@Body() user: User) {
+    return await this.usersService.createUser(user);
+  }
 }
